<?xml version="1.0" encoding="UTF-8" ?>
<!--
  ~ Copyright 2020 Simone Sestito
  ~ This file is part of WallApp.
  ~
  ~ WallApp is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ WallApp is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with WallApp.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name" translatable="false">WallApp</string>
    <string name="categories_empty_view_text">Internet connection required</string>
    <string name="single_category_empty_view_text">You are offline</string>
    <string name="category_wallpapers_count_prefix">%d wallpapers</string>
    <string name="fab_wallpaper_action_download">Download wallpaper</string>
    <string name="wallpaper_action_share">Share link</string>
    <string name="fab_wallpaper_action_preview">Preview</string>
    <string name="wallpaper_setup_bottom_sheet_location">Where to apply?</string>
    <string name="wallpaper_setup_location_home">Home screen</string>
    <string name="wallpaper_setup_location_lock">Lock screen</string>
    <string name="wallpaper_setup_location_both">Both</string>
    <string name="wallpaper_setup_apply_button">Apply</string>
    <string name="wallpaper_setup_status_downloading">Downloading chosen wallpaper…</string>
    <string name="wallpaper_setup_status_success">Wallpaper downloaded! Enjoy</string>
    <string name="wallpaper_setup_status_failed">An error has occurred, please retry</string>
    <string name="wallpaper_setup_status_finalizing">Applying your wallpaper…</string>
    <string name="preview_mode_title">Preview Mode</string>
    <string name="permission_request_dialog_title">Permission requested</string>
    <string name="permission_request_positive_button">Grant</string>
    <string name="permission_request_negative_button">Deny</string>
    <string name="permission_read_storage_request_message">You should grant the permission to read storage to permit the app to backup your current wallpaper</string>
    <string name="wallpaper_preview_state_backup">Taking care about your current wallpaper…</string>
    <string name="preview_mode_title_close_preview">Leaving Preview Mode…</string>
    <string name="wallpaper_share_text_message">Look at this awesome wallpaper I found!\n%s</string>
    <string name="wallpaper_share_chooser_title">Share wallpaper link</string>
    <string name="wallpaper_setup_formats_info">Our wallpapers are already optimized exactly for your screen size</string>
    <string name="wallpaper_preview_live_wallpaper_set_error">Preview Mode doesn\'t work when you have use live wallpaper.\nPlease, set the wallpaper directly.</string>
    <string name="app_motto">No ads. No tricks. Just wallpapers.</string>
    <string name="app_description">A cloud based wallpaper app without ads, tricks and subscriptions. Just Wallpapers. Every wallpaper is unique, made personally with a camera or with a graphic software, edited and cropped to fit your smartphone screen perfectly.\n\nAlso available on iPhone.\n\nYou aren\'t supposed to directly share the wallpaper file, use the Share function instead.\n\nFeel free to share your experience and suggestion with the team via email.</string>
    <string name="about_fragment_title">About</string>
    <string name="about_fragment_authors_title">People behind the scenes</string>
    <string name="about_button_portfolio">Portfolio</string>
    <string name="about_button_email">Email</string>
    <string name="about_author_name_1" translatable="false">Simone Sestito</string>
    <string name="about_author_role_1">Web and Android developer\nAndroid co-designer</string>
    <string name="about_author_name_2" translatable="false">Paolo Giubilato</string>
    <string name="about_author_role_2">iOS developer\niOS and Android designer</string>
    <string name="about_fragment_feedback_title">Send a feedback</string>
    <string name="about_feedback_play_store">Rate on Google Play</string>
    <string name="activity_not_found_error">No installed app can handle this action</string>
    <string name="intro_slide_unique_wallpapers_title">Unique wallpapers</string>
    <string name="intro_slide_unique_wallpapers_description">Always new wallpapers made by us, created from scratch and optimised for your display.</string>
    <string name="intro_slide_welcome_title">Welcome to WallApp!</string>
    <string name="intro_slide_welcome_description">A cloud based wallpaper app without ads, tricks and subscriptions. Just Wallpapers.</string>
    <string name="intro_slide_no_ads_title">No ADS</string>
    <string name="intro_slide_no_ads_description">Ads while enjoying your wallpapers? Just NO</string>
    <string name="intro_slide_no_subs_title">It\'s yours. Forever.</string>
    <string name="intro_slide_no_subs_description">No more purchases or subscriptions. A clean app only to provide you amazing wallpapers.</string>
    <string name="about_feedback_bug_report">Report a bug</string>
    <string name="policy_checker_failed_message">This app is not licensed by Google Play. Please buy this app</string>
    <string name="policy_checker_failed_title">Pirated app!</string>
    <string name="policy_checker_dialog_button">Close app</string>
    <string name="policy_checker_offline_title">License verification failed</string>
    <string name="policy_checker_offline_message">App purchase can\'t be verified. Please check your Internet connection</string>
    <string name="singleCategoryLayoutRowSwitch">Switch layout</string>
    <string name="category_group_original">WallApp Originals</string>
    <string name="category_group_community">Community</string>
    <string name="preview_service_notification_title">Preview Mode is running</string>
    <string name="preview_service_notification_text">Click to stop Preview Mode</string>
    <string name="overlay_permission_request">Preview Mode requires this permission to be used.</string>
    <string name="permission_write_storage_request_message">To allow the app to save this wallpaper into your gallery, please grant this permission</string>
    <string name="wallpaper_setup_download_button">Download</string>
    <string name="wallpaper_location_miui_warning">This wallpaper will be set on homescreen only. To apply on lockscreen, download it and apply it manually from system settings.</string>
    <string name="wallpaper_author_info">Author info</string>
    <string name="wallpaper_author_social">More info</string>
    <string name="donation_dialog_menu_item">Donate</string>
    <string name="donation_item_title" translatable="false">%1$s (%2$s)</string>
    <string name="donation_item_subtitle">I\'ll receive only %s.\nVAT and Google tax are applied.</string>
    <string name="donation_bottomsheet_title">Make a donation</string>
    <string name="donation_success_message">Thanks for the donation! \u2764\uFE0F</string>
</resources>
