<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Simone Sestito
  ~ This file is part of WallApp.
  ~
  ~ WallApp is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ WallApp is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with WallApp.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/aboutScrollContentRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_content_margin"
    android:clipToPadding="false"
    android:paddingTop="@dimen/app_bar_height">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/aboutAppLogo"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginBottom="@dimen/margin_separator_normal"
            android:src="@mipmap/ic_launcher_web" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aboutAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_separator_small"
            android:text="@string/app_name"
            android:textAppearance="@style/AppTheme.Text.Title"
            android:textColor="?colorAccent"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aboutAppMotto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_separator_normal"
            android:gravity="center"
            android:text="@string/app_motto"
            android:textAppearance="@style/AppTheme.Text.Subtitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aboutDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_separator_normal"
            android:gravity="center_horizontal"
            android:text="@string/app_description" />

        <com.google.android.material.card.MaterialCardView
            style="@style/AppTheme.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_separator_small">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/authorCardName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_author_name"
                    android:textAppearance="@style/AppTheme.Text.Title"
                    android:textColor="@color/color_accent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/authorCardRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_author_role"
                    android:textAppearance="@style/AppTheme.Text.Standard"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/authorCardName" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/authorMailButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/about_button_email"
                    android:textColor="?colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/authorPortfolioButton" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/authorPortfolioButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/about_button_portfolio"
                    android:textColor="?colorAccent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/authorCardRole" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aboutFeedbackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/margin_separator_normal"
            android:layout_marginBottom="@dimen/margin_separator_normal"
            android:text="@string/about_fragment_feedback_title"
            android:textAppearance="@style/AppTheme.Text.Title" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aboutDonationButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/donation_about_text_item"
            app:drawableStartCompat="@drawable/ic_gift_menu_outline"
            app:drawableTint="?colorAccent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aboutFeedbackPlayButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/about_feedback_play_store"
            app:drawableStartCompat="@drawable/ic_star_accent_24dp"
            app:drawableTint="?colorAccent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/aboutFeedbackMailButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:text="@string/about_feedback_bug_report"
            app:drawableStartCompat="@drawable/ic_bug_report_accent_24dp"
            app:drawableTint="?colorAccent" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>